# hcDNN

./: CMakeLists.txt  LICENSE  README.md  setup.sh
cmake/: gtest.cmake
include/: hcdnn.h
src/: LRN.cc  convolution.cc  tensor.cc
test/: test_convolution.cc
